# othello

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  fasthtml_ui.py  pyproject.toml  ui.py
python/: benchmark.py
python/othello/: __init__.py  ui.py
src/: ai.rs  bits.rs  board.rs  consts.rs  game.rs  lib.rs
