[project]
name = "othello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.4.5",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "pip>=24.2",
    "maturin>=1,<2"
]
