[project]
name = "othello"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-fasthtml>=0.4.5",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.uv]
managed = true
dev-dependencies = [
    "ruff>=0.6.2",
    "pip>=24.2",
    "maturin>=1,<2",
    "tqdm>=4.66.5",
]

[tool.maturin]
python-source = "python"
module-name = "othello._othello"
bindings = 'pyo3'
features = ["pyo3/extension-module"]

[project.scripts]
othello-ui = "othello.ui:main"